@@ -1,3 +1,7 @@
+2002-04-06  Hans-Peter Nilsson  <hp@axis.com>
+
+	* ld-cris/libdso-2.d, ld-cris/dso-2.s, ld-cris/hide1: New test.
+
 2002-02-18  Daniel Jacobowitz  <drow@mvista.com>
 
 	* ld-elfvsb/sh1.c: Fix typo in last change.
